--- a/index.html
+++ b/index.html
@@ -338,18 +338,15 @@
                   </div>
             </div>
 </section>
-
+<div >
+    <video src="video.mp4" controls autoplay muted></video>
+</div>
 <div id="fundonatal">
-    <a href="https://api.whatsapp.com/send?phone=5511942903148" class="cha1" id="chamada1">TEMOS VAGAS PARA O NATAL</a>
-    <img src="arvorenatal.png" id="imgnatal">
-
-    <a href="https://api.whatsapp.com/send?phone=5511942903148" id="pergunta">Ja pensou em comemorar a <br> santa seia em um Sítio ? </a>
-
-    <a href="https://api.whatsapp.com/send?phone=5511942903148" id="sim"> Sim, Claro!</a>
-    <a href="https://api.whatsapp.com/send?phone=5511942903148" id="nao">É uma Boa Ideia</a>
-
-    <p id="comentario">Eventos Corporativos e Pessoal.<br>Alugamos para confraternizações e em especial, para o natal. </p>
-    <a href="https://api.whatsapp.com/send?phone=5511942903148" id="fale">Clique aqui e fale com a gente !!</a>
+    
+    <img src="anonovo.jpg.jpg" id="novo" >
+    <img src="anonovomb.jpg" id="mobilenovo" class="novomobile">
+    <p></p>
+ 
 </div>
 
 
