--- a/index.html
+++ b/index.html
@@ -343,14 +343,8 @@
     <video src="video.mp4" controls autoplay muted></video>
 </div>
 <div id="fundonatal">
-    
-    <img src="folders/anonovo.jpg" id="novo" >
-    <img src="folders/carnaval.jpg" id="carnaval">
-    <img src="folders/janeiro.jpg" id="janeiro">
-
-
-    
- 
+       <img src="folders/janeiro.jpg" id="janeiro"> 
+       <img src="folders/janeiro2.jpg" alt="" id="janeiro2"> 
 </div>
 
 
