--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <nav class="desk-nav">
             <a href="index.html" id="desk-dadosnav">Inicio</a>
             <a href="page/galery.html" id="desk-dadosnav">Galeria</a>
-            <a href="page/eventos.html" id="desk-dadosnav">Eventos</a>
-            <a href="page/localizaçao.html" id="desk-dadosnav">Localização</a>
+            <a href="" id="desk-dadosnav">Eventos</a>
+            <a href="" id="desk-dadosnav">Localização</a>
         </nav>
 
         <nav class="desk-contato">
@@ -90,8 +90,8 @@
             <nav id="section-menumob">
                     <a href="index.html" id="mob-dadosnav">Inicio</a>
                     <a href="page/galery.html" id="mob-dadosnav">Galeria</a>
-                    <a href="page/eventos.html" id="mob-dadosnav">Eventos</a>
-                    <a href="page/localizaçao.html" id="mob-dadosnav">Localização</a>
+                    <a href="" id="mob-dadosnav">Eventos</a>
+                    <a href="" id="mob-dadosnav">Localização</a>
             </nav>
 
             <a href="https://api.whatsapp.com/send?phone=5511942903148" id="btn-mobmenu">Fale Conosco</a>
