--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
         <article class="fundo-menucomentario">
             
             <div class="fundo-titulocomentario">
-                <p>Veja o nossos Comentários:</p>
+                <p>Veja nossos Comentarios:</p>
             </div>
 
             <div class="fundo-colocarcomentario">
